--- a/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli_starter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
        "4                                       Fury   1.44  "
       ]
      },
-     "execution_count": 240,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "0            576"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "0                     179         $3.05                  780     $2,379.77"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
        "Other / Non-Disclosed           11                 1.91%"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +413,7 @@
     "other_percentage\n",
     "\n",
     "# Define the Data Frame of the Summary Table\n",
-    "summary_table_df = pd.DataFrame({\"Total Count\": [male_count_df, female_count_df, other_count_df],\n",
+    "summary_table_df = pd.DataFrame({\"Total Count\": [male_count, female_count, other_count],\n",
     "                                \"Percentage of Players\": [male_percentage, female_percentage,\n",
     "                                                         other_percentage]},\n",
     "                               index = [\"Male\", \"Female\", \"Other / Non-Disclosed\"])\n",
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -474,38 +474,60 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Total Count</th>\n",
-       "      <th>Percentage of Players</th>\n",
+       "      <th>Purchase Count</th>\n",
+       "      <th>Average Purchase Price</th>\n",
+       "      <th>Total Purchase Value</th>\n",
+       "      <th>Avg Total Purchase per Person</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gender</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Male</th>\n",
-       "      <td>484</td>\n",
-       "      <td>84.03%</td>\n",
+       "      <th>Female</th>\n",
+       "      <td>113</td>\n",
+       "      <td>$3.20</td>\n",
+       "      <td>$361.94</td>\n",
+       "      <td>$4.47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Female</th>\n",
-       "      <td>81</td>\n",
-       "      <td>14.06%</td>\n",
+       "      <th>Male</th>\n",
+       "      <td>652</td>\n",
+       "      <td>$3.02</td>\n",
+       "      <td>$1,967.64</td>\n",
+       "      <td>$4.07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Other / Non-Disclosed</th>\n",
-       "      <td>11</td>\n",
-       "      <td>1.91%</td>\n",
+       "      <td>15</td>\n",
+       "      <td>$3.35</td>\n",
+       "      <td>$50.19</td>\n",
+       "      <td>$4.56</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       Total Count Percentage of Players\n",
-       "Male                           484                84.03%\n",
-       "Female                          81                14.06%\n",
-       "Other / Non-Disclosed           11                 1.91%"
+       "                       Purchase Count Average Purchase Price  \\\n",
+       "Gender                                                         \n",
+       "Female                            113                  $3.20   \n",
+       "Male                              652                  $3.02   \n",
+       "Other / Non-Disclosed              15                  $3.35   \n",
+       "\n",
+       "                      Total Purchase Value Avg Total Purchase per Person  \n",
+       "Gender                                                                    \n",
+       "Female                             $361.94                         $4.47  \n",
+       "Male                             $1,967.64                         $4.07  \n",
+       "Other / Non-Disclosed               $50.19                         $4.56  "
       ]
      },
-     "execution_count": 244,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +574,7 @@
     "gender_df = gender_df.set_index(\"Gender\")\n",
     "\n",
     "# Display the Summary Table\n",
-    "summary_table_df"
+    "gender_df"
    ]
   },
   {
@@ -586,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +693,7 @@
        "40+             12                 2.08%"
       ]
      },
-     "execution_count": 245,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -753,6 +775,13 @@
        "      <th>Average Purchase Price</th>\n",
        "      <th>Total Purchase Value</th>\n",
        "      <th>Avg Total Purchase Per Person</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Age Group</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -817,28 +846,30 @@
        "</div>"
       ],
       "text/plain": [
-       "       Purchase Count Average Purchase Price  Total Purchase Value  \\\n",
-       "<10                23                  $3.35                 77.13   \n",
-       "10-14              28                  $2.96                 82.78   \n",
-       "15-19             136                  $3.04                412.89   \n",
-       "20-24             365                  $3.05               1114.06   \n",
-       "25-29             101                   $2.9                293.00   \n",
-       "30-34              73                  $2.93                214.00   \n",
-       "35-39              41                   $3.6                147.67   \n",
-       "40+                13                  $2.94                 38.24   \n",
+       "           Purchase Count Average Purchase Price  Total Purchase Value  \\\n",
+       "Age Group                                                                \n",
+       "<10                    23                  $3.35                 77.13   \n",
+       "10-14                  28                  $2.96                 82.78   \n",
+       "15-19                 136                  $3.04                412.89   \n",
+       "20-24                 365                  $3.05               1114.06   \n",
+       "25-29                 101                   $2.9                293.00   \n",
+       "30-34                  73                  $2.93                214.00   \n",
+       "35-39                  41                   $3.6                147.67   \n",
+       "40+                    13                  $2.94                 38.24   \n",
        "\n",
-       "      Avg Total Purchase Per Person  \n",
-       "<10                           $0.13  \n",
-       "10-14                         $0.14  \n",
-       "15-19                         $0.72  \n",
-       "20-24                          $1.9  \n",
-       "25-29                         $0.51  \n",
-       "30-34                         $0.37  \n",
-       "35-39                         $0.26  \n",
-       "40+                          $0.066  "
+       "          Avg Total Purchase Per Person  \n",
+       "Age Group                                \n",
+       "<10                               $0.13  \n",
+       "10-14                             $0.14  \n",
+       "15-19                             $0.72  \n",
+       "20-24                              $1.9  \n",
+       "25-29                             $0.51  \n",
+       "30-34                             $0.37  \n",
+       "35-39                             $0.26  \n",
+       "40+                              $0.066  "
       ]
      },
-     "execution_count": 246,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -851,17 +882,20 @@
     "# Create the groups for the age bins\n",
     "age_groups = [\"<10\", \"10-14\", \"15-19\", \"20-24\", \"25-29\", \"30-34\", \"35-39\", \"40+\"]\n",
     "\n",
+    "purchase_data_df[\"Age Group\"] = pd.cut(purchase_data_df[\"Age\"], bins, labels=age_groups)\n",
+    "age_groups = purchase_data_df.groupby([\"Age Group\"])\n",
+    "\n",
     "# Run basic calculations to obtain purchase count, avg. purchase price, avg. purchase total per person, etc.\n",
-    "purchase_count_age = age_group[\"Purchase ID\"].count()\n",
-    "avg_purchase_price_age = age_group[\"Price\"].mean().map(\"${:,.3}\".format)\n",
-    "total_purchase_value_age = age_group[\"Price\"].sum()\n",
-    "avg_total_purchase_age = (total_purchase_value / total_players).map(\"${:,.2}\".format)\n",
+    "purchase_count_age = age_groups[\"Purchase ID\"].count()\n",
+    "avg_purchase_price_age = age_groups[\"Price\"].mean().map(\"${:,.3}\".format)\n",
+    "total_purchase_value_age = age_groups[\"Price\"].sum()\n",
+    "avg_total_purchase_age = (total_purchase_value_age / total_players).map(\"${:,.2}\".format)\n",
     "\n",
     "# create a summary table to hold the results\n",
     "purchase_age_df = pd.DataFrame({\"Purchase Count\": purchase_count_age,\n",
-    "                                          \"Average Purchase Price\": avg_purchase_price_age,\n",
-    "                                          \"Total Purchase Value\": total_purchase_value_age,\n",
-    "                                          \"Avg Total Purchase Per Person\": avg_total_purchase_age}, index=age_groups)\n",
+    "                                \"Average Purchase Price\": avg_purchase_price_age,\n",
+    "                                \"Total Purchase Value\": total_purchase_value_age,\n",
+    "                                \"Avg Total Purchase Per Person\": avg_total_purchase_age})\n",
     "\n",
     "# display the summary data frame\n",
     "purchase_age_df"
@@ -896,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -976,7 +1010,7 @@
        "Iskadarya95               3                  $4.37               $13.10"
       ]
      },
-     "execution_count": 247,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1038,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1078,31 +1112,31 @@
        "      <th>Final Critic</th>\n",
        "      <td>13</td>\n",
        "      <td>$4.61</td>\n",
-       "      <td>59.99</td>\n",
+       "      <td>$6e+01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Oathbreaker, Last Hope of the Breaking Storm</th>\n",
        "      <td>12</td>\n",
        "      <td>$4.23</td>\n",
-       "      <td>50.76</td>\n",
+       "      <td>$5.1e+01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Persuasion</th>\n",
        "      <td>9</td>\n",
        "      <td>$3.22</td>\n",
-       "      <td>28.99</td>\n",
+       "      <td>$2.9e+01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Nirvana</th>\n",
        "      <td>9</td>\n",
        "      <td>$4.9</td>\n",
-       "      <td>44.10</td>\n",
+       "      <td>$4.4e+01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Extraction, Quickblade Of Trembling Hands</th>\n",
        "      <td>9</td>\n",
        "      <td>$3.53</td>\n",
-       "      <td>31.77</td>\n",
+       "      <td>$3.2e+01</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1117,16 +1151,16 @@
        "Nirvana                                                    9       $4.9   \n",
        "Extraction, Quickblade Of Trembling Hands                  9      $3.53   \n",
        "\n",
-       "                                              Total Purchase Value  \n",
-       "Item Name                                                           \n",
-       "Final Critic                                                 59.99  \n",
-       "Oathbreaker, Last Hope of the Breaking Storm                 50.76  \n",
-       "Persuasion                                                   28.99  \n",
-       "Nirvana                                                      44.10  \n",
-       "Extraction, Quickblade Of Trembling Hands                    31.77  "
+       "                                             Total Purchase Value  \n",
+       "Item Name                                                          \n",
+       "Final Critic                                               $6e+01  \n",
+       "Oathbreaker, Last Hope of the Breaking Storm             $5.1e+01  \n",
+       "Persuasion                                               $2.9e+01  \n",
+       "Nirvana                                                  $4.4e+01  \n",
+       "Extraction, Quickblade Of Trembling Hands                $3.2e+01  "
       ]
      },
-     "execution_count": 248,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1149,7 +1183,7 @@
     "sorted_most_pop_df = most_pop_df.sort_values(\"Purchase Count\", ascending=False)\n",
     "\n",
     "# format\n",
-    "sorted_most_pop[\"Total Purchase Value\"] = sorted_most_pop[\"Total Purchase Value\"].map(\"${:.2}\".format)\n",
+    "sorted_most_pop_df[\"Total Purchase Value\"] = sorted_most_pop_df[\"Total Purchase Value\"].map(\"${:.2}\".format)\n",
     "\n",
     "# display a preview of the summary data frame\n",
     "sorted_most_pop_df.head()"
@@ -1178,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1218,31 +1252,31 @@
        "      <th>Final Critic</th>\n",
        "      <td>13</td>\n",
        "      <td>$4.61</td>\n",
-       "      <td>59.99</td>\n",
+       "      <td>$6e+01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Oathbreaker, Last Hope of the Breaking Storm</th>\n",
        "      <td>12</td>\n",
        "      <td>$4.23</td>\n",
-       "      <td>50.76</td>\n",
+       "      <td>$5.1e+01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Nirvana</th>\n",
        "      <td>9</td>\n",
        "      <td>$4.9</td>\n",
-       "      <td>44.10</td>\n",
+       "      <td>$4.4e+01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Fiery Glass Crusader</th>\n",
        "      <td>9</td>\n",
        "      <td>$4.58</td>\n",
-       "      <td>41.22</td>\n",
+       "      <td>$4.1e+01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Singed Scalpel</th>\n",
        "      <td>8</td>\n",
        "      <td>$4.35</td>\n",
-       "      <td>34.80</td>\n",
+       "      <td>$3.5e+01</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1257,16 +1291,16 @@
        "Fiery Glass Crusader                                       9      $4.58   \n",
        "Singed Scalpel                                             8      $4.35   \n",
        "\n",
-       "                                              Total Purchase Value  \n",
-       "Item Name                                                           \n",
-       "Final Critic                                                 59.99  \n",
-       "Oathbreaker, Last Hope of the Breaking Storm                 50.76  \n",
-       "Nirvana                                                      44.10  \n",
-       "Fiery Glass Crusader                                         41.22  \n",
-       "Singed Scalpel                                               34.80  "
+       "                                             Total Purchase Value  \n",
+       "Item Name                                                          \n",
+       "Final Critic                                               $6e+01  \n",
+       "Oathbreaker, Last Hope of the Breaking Storm             $5.1e+01  \n",
+       "Nirvana                                                  $4.4e+01  \n",
+       "Fiery Glass Crusader                                     $4.1e+01  \n",
+       "Singed Scalpel                                           $3.5e+01  "
       ]
      },
-     "execution_count": 249,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1289,7 +1323,7 @@
     "sorted_most_pop_df = most_pop_df.sort_values(\"Total Purchase Value\", ascending=False)\n",
     "\n",
     "# format\n",
-    "sorted_most_pop[\"Total Purchase Value\"] = sorted_most_pop[\"Total Purchase Value\"].map(\"${:.2}\".format)\n",
+    "sorted_most_pop_df[\"Total Purchase Value\"] = sorted_most_pop_df[\"Total Purchase Value\"].map(\"${:.2}\".format)\n",
     "\n",
     "# display a preview of the summary data frame\n",
     "sorted_most_pop_df.head()"
